<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="textPersonName"
        android:text="@string/title"
        android:layout_marginTop="27dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/editDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine|textPersonName"
        android:text="@string/description"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/editTitle"
        android:layout_alignParentStart="true" />
    <CheckBox
        android:id="@+id/checkBoxIdea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idea_checkbox"
        android:layout_marginTop="69dp"
        android:layout_below="@+id/editDescription"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/checkBoxTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_checkbox"
        android:layout_below="@+id/checkBoxIdea"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <CheckBox
        android:id="@+id/checkBoxImportant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/important_checkBox"
        android:layout_below="@+id/checkBoxTodo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:layout_alignBaseline="@+id/btnOK"
        android:layout_alignBottom="@+id/btnOK"
        android:layout_alignParentStart="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="35dp" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>