<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ebookfrenzy.notetoself.SettingsActivity">

    <TextView
        android:id="@+id/textViewSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Settings"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="84dp"
        android:text="Sound FX"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,RtlHardcoded"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <CheckBox
        android:id="@+id/soundCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/on_or_off"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSound" />

    <TextView
        android:id="@+id/textViewAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/animation_speed"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/soundCheckBox"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.727" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624"
        tools:ignore="RtlHardcoded"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <RadioButton
            android:id="@+id/radioFast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/rb_fast"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints,RtlHardcoded"
            tools:layout_editor_absoluteY="204dp" />

        <RadioButton
            android:id="@+id/radioSlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/rb_slow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <RadioButton
            android:id="@+id/radioNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/rb_none"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints,RtlHardcoded"
            tools:layout_editor_absoluteY="272dp" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
